# pyecsca-codegen

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: INSTALL.md  commands.rst  install.rst
ext/: Makefile
pyecsca/codegen/: .gitignore  Makefile  Makefile.inc  __init__.py  action.h  bn.c  bn.h  builder.py  client.py  common.py  coords.h  curve.h  defs.h  fat.h  formulas.h  main.c  mult.h  point.h  rand.h  render.py
pyecsca/codegen/asn1/: asn1.c  asn1.h
pyecsca/codegen/bn/: bn.c  bn.h
pyecsca/codegen/hal/: Makefile.hal  hal.h
pyecsca/codegen/hal/host/: Makefile.host  host_hal.c  host_hal.h  uart.c  uart.h
pyecsca/codegen/hal/stm32f0/: Makefile.stm32f0  stm32f0_hal.c  stm32f0_hal.h  stm32f0_hal_lowlevel.c
pyecsca/codegen/hal/stm32f0/CMSIS/core/: core_cm0.h
pyecsca/codegen/hal/stm32f0_nano/: Makefile.stm32f0_nano  stm32f0_hal_nano.c
pyecsca/codegen/hal/stm32f3/: Makefile.stm32f3  stm32f3_hal.c  stm32f3_hal.h  stm32f3_hal_lowlevel.c  stm32f3_startup.S
pyecsca/codegen/hal/stm32f3/CMSIS/core/: core_cm4.h
pyecsca/codegen/hal/xmega/: Makefile.xmega  uart.c  uart.h  xmega_hal.c  xmega_hal.h
pyecsca/codegen/hash/: hash.c  hash.h  none.c  sha1.c  sha1.h  sha2.c  sha2.h
pyecsca/codegen/mult/: double_and_add.c  mult.c  mult.h
pyecsca/codegen/prng/: KeccakP-200-compact.c  prng.c  prng.h
pyecsca/codegen/simpleserial/: simpleserial.c  simpleserial.h
pyecsca/codegen/templates/: Makefile  action.c  coords.c  coords.h  curve.c  curve.h  defs.h  formula_add.c  formula_dadd.c  formula_dbl.c  formula_ladd.c  formula_neg.c  formula_scl.c  formula_tpl.c  formulas.c  main.c  mult.c  mult_bgmw.c  mult_bnaf.c  mult_booth.c  mult_comb.c  mult_coron.c  mult_diff_ldr.c  mult_fixed_w.c  mult_ldr.c  mult_ltr.c  mult_precomp.c  mult_rtl.c  mult_simple_ldr.c  mult_sliding_w.c  mult_wnaf.c  ops.c  point.c  rand.c
test/: .gitignore  Makefile  conftest.py  gdb_script.py  test_bn.c  test_builder.py  test_client.py  test_commands.py  test_emulator.py  test_encoding.py  test_equivalence.py  test_impl.py  test_regress.py  test_render.py  test_simulator.py
