[build-system]
  requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "pyecsca-codegen"
  version = "0.3.2"
  authors = [
    { name = "Jan Jancar", email = "johny@neuromancer.sk" },
    { name = "Andrej Batora"}
  ]
  maintainers = [
    { name = "Jan Jancar", email = "johny@neuromancer.sk" }
  ]
  description = "Python Elliptic Curve cryptography Side Channel Analysis toolkit (codegen package)."
  readme = "README.md"
  license = { "text" = "MIT" }
  classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
  ]
  requires-python = ">=3.9"
  dependencies = [
    "pyecsca",
    "chipwhisperer",
    "numpy",
    "scipy",
    "atpublic",
    "matplotlib",
    "fastdtw",
    "asn1crypto",
    "jinja2",
    "Click",
    "importlib-resources",
    "donjon-rainbow"
  ]

[project.urls]
"Homepage" = "https://pyecsca.org"
"Documentation" = "https://pyecsca.org"
"Bug Tracker" = "https://github.com/J08nY/pyecsca-codegen/issues"
"Repository" = "https://github.com/J08nY/pyecsca-codegen"

[project.scripts]
builder="pyecsca.codegen.builder:main"
client="pyecsca.codegen.client:main"

[project.optional-dependencies]
"dev" = ["mypy", "flake8"]
"test" = ["pytest>=7.0.0", "coverage", "pytest-cov", "pytest-sugar", "pytest-click"]

[tool.setuptools.packages.find]
include = ["pyecsca*"]
namespaces = true

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore:(?s).*pkg_resources is deprecated as an API:DeprecationWarning:chipwhisperer.capture.trace.TraceWhisperer", # ChipWhisperer
    "ignore:Deprecated call to `pkg_resources.declare_namespace",
    "ignore:(?s).*path is deprecated. Use files() instead:DeprecationWarning:rainbow.devices.stm32" # Rainbow
]
